ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-web-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
spec:
  rules:
    - host: myapp.com
      http:
        paths:
          - path: /home
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
    - host: myapp.com
      http:
        paths:
          - path: /page
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
  tls:
    - hosts:
        - myapp.com
      secretName: tls-secret
